--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -5,14 +5,14 @@
 \chapter{\IfLanguageName{dutch}{Inleiding}{Introduction}}%
 \label{ch:inleiding}
 
-In de evenementenbranche wordt er steeds meer gebruikgemaakt van vernieuwde technologieën om het gebruiksgemak van de bezoekers te vergroten en de veiligheid te garanderen. Denk aan contactloze betalingen aan de hand van NFC chips en QR-codes om toegangskaartjes te scannen. Het veilig opbergen van persoonlijke spullen kan vanaf nu ook gemoderniseerd worden. Het bedrijf Lockit Rentals heeft hiervoor in 2022 QR-code lockers ontworpen en geïntroduceerd. Met die unieke QR-code kunnen klanten hun persoonlijke spullen veilig opbergen en de locker onbeperkt openen voor een vaste opgelegde periode. De problemen ontstaan als de toegangscode die voorgesteld wordt als een QR-code niet meer uitgelezen kan worden of wanneer de klant zijn/haar QR-code verliest. 
+In de evenementenbranche wordt er steeds meer beroep gedaan op vernieuwde technologieën om het gebruiksgemak van de bezoekers te vergroten en de veiligheid te garanderen. Denk aan contactloze betalingen aan de hand van NFC chips en QR-codes om toegangskaartjes te scannen. Het veilig opbergen van persoonlijke spullen kan vanaf nu ook gemoderniseerd worden. Het bedrijf Lockit Rentals heeft hiervoor in 2022 QR-code lockers ontworpen en geïntroduceerd. Met die unieke QR-code kunnen klanten hun persoonlijke spullen veilig opbergen en de locker onbeperkt openen voor een vaste opgelegde periode. De problemen ontstaan als de toegangscode die voorgesteld wordt als een QR-code niet meer uitgelezen kan worden of wanneer de klant zijn/haar QR-code verliest.
 
 \newpage
 
 \section{\IfLanguageName{dutch}{Probleemstelling}{Problem Statement}}%
 \label{sec:probleemstelling}
 
-Bij het digitaliseren van lockers op evenementen kan er een uitdaging ontstaan doordat de festivalgangers zelf verantwoordelijk zijn voor de inhoud van het kluisje, evenals hun gekochte toegangscode. Deze toegangscode, die als QR-code wordt voorgesteld kan bewaard worden op allerlei manieren. Enkele mogelijkheden zijn: bewaren als bijlage, bewaren op de mobiele applicatie van Lockit Rentals of wanneer als effectieve QR-code voorgesteld op papier. Uiteraard is er geen zekerheid dat de festivalganger zijn code in zijn bezit heeft tot op het einde van een evenement. De huurder zijn telefoon kan uitgevallen zijn waardoor dat de persoon in kwestie de QR-code niet meer in bezit heeft of de festivalganger speelt de afgedrukte versie van de QR-code kwijt is. Om dit probleem te voorkomen zal gedurende de uitbating logistiek personeel aanwezig moeten zijn. Deze kunnen aan de hand van administratierechten een duplicaat QR-code genereren om zo de locker te openen. Lockit Rentals wil dit probleem doeltreffend oplossen zodat hun bedrijfsactiviteiten verbeteren. \newline 
+Bij het digitaliseren van lockers op evenementen kan er een uitdaging ontstaan doordat de festivalgangers zelf verantwoordelijk zijn voor de inhoud van het kluisje, evenals hun gekochte toegangscode. Deze toegangscode, die als QR-code wordt voorgesteld kan bewaard worden op allerlei manieren. Enkele mogelijkheden zijn: bewaren als bijlage, bewaren op de mobiele applicatie van Lockit Rentals of wanneer als effectieve QR-code voorgesteld op papier. Uiteraard is er geen zekerheid dat de festivalganger zijn code in zijn bezit heeft tot op het einde van een evenement. De huurder zijn telefoon kan uitgevallen zijn waardoor dat de persoon in kwestie de QR-code niet meer in bezit heeft of de festivalganger speelt de afgedrukte versie van de QR-code kwijt. Om dit probleem te voorkomen zal gedurende de uitbating logistiek personeel aanwezig moeten zijn. Deze kunnen aan de hand van administratierechten een duplicaat QR-code genereren om zo de locker te openen. Lockit Rentals wil dit probleem doeltreffend oplossen zodat hun bedrijfsactiviteiten verbeteren. \newline 
 
 Een extra problematiek doet zich voor als de QR-code scanners niet optimaal functioneren. Deze problemen kunnen ontstaan door onveranderbare factoren zoals hevige zon of felle regen. Eveneens door QR-code scanners die foutief zijn afgesteld of zijn aangetast tijdens het transport of verplaatsing van de lockers. Ook hebben mensen die niet op de hoogte zijn van het systeem extra hulp nodig bij het scannen. Door het willen afschaffen van de logistieke medewerkers verliezen ze hier de mogelijkheid om informatieve en technische hulp aan te bieden ten behoeve van de klanten. Na festivalzomer 2022 is gebleken uit de observaties van het bedrijf dat de technologieën niet genoeg uitgewerkt zijn om de units onbemand uit te baten.
 
@@ -48,7 +48,7 @@ Op deze vragen wordt doorheen het onderzoek een duidelijk antwoord aangeboden. D
 \label{sec:onderzoeksdoelstelling}
 Het beoogd resultaat zal kunnen aantonen dat deze bachelorproef betere inzichten heeft verworpen voor het bedrijf Lockit Rentals. Uiteraard geeft het hoofdstuk verwerking van resultaten \ref{ch:verwerkingresultaten} geen garanties op de bedrijfsactiviteiten, het zijn wel factoren waar het bedrijf rekening mee kan houden in de toekomst om deze te optimaliseren.
 
-Kortom, het digitaliseren van lockers kan bijdragen aan een efficiëntere, veiligere en meer klantvriendelijke ervaringen voor festivalgangers. In het onderzoek zullen er voor beide problemen Proof-of-Concepten opgesteld worden. De combinatie tussen een hardware opstelling en een software uitwerking kan aantonen dat er efficiëntere en snellere manieren zijn om een locker te openen met behulp van een QR-code. Hieruit zullen experimenten uit voortvloeien waaruit conclusies getrokken worden. Een tweede Proof-Of-Concept heeft verband met de ontwikkeling van een online automatische chatbot die het takenpakket van de logistieke medewerkers overneemt. De uitwerking zal voortvloeien in een prototype dat operationeel en geïntegreerd zal zijn in de applicatie van Lockit Rentals. Beide ontwikkelingen zullen moeten voldoen aan een vooraf opgestelde criteria analyse die in handen ligt van het bedrijf. 
+Kortom, het digitaliseren van lockers kan bijdragen aan efficiëntere, veiligere en meer klantvriendelijke ervaringen voor festivalgangers. In het onderzoek zullen er voor beide problemen Proof-of-Concepten opgesteld worden. De combinatie tussen een hardware opstelling en een software uitwerking kan aantonen dat er efficiëntere en snellere manieren zijn om een locker te openen met behulp van een QR-code. Hieruit zullen experimenten voortvloeien waaruit conclusies getrokken worden. Een tweede Proof-Of-Concept heeft verband met de ontwikkeling van een online automatische chatbot die het takenpakket van de logistieke medewerkers overneemt. De uitwerking zal voortvloeien in een prototype dat operationeel en geïntegreerd zal zijn in de applicatie van Lockit Rentals. Beide ontwikkelingen zullen moeten voldoen aan een vooraf opgestelde criteria analyse die in handen ligt van het bedrijf. 
 
 
 \section{\IfLanguageName{dutch}{Opzet van deze bachelorproef}{Structure of this bachelor thesis}}%
@@ -63,9 +63,9 @@ In Hoofdstuk~\ref{ch:stand-van-zaken} wordt een overzicht gegeven van de stand v
 
 In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de onderzoeksvragen.
 
-In hoofdstuk \ref{ch:Proof-Of-Concept} wordt toegelichte welke oplossingen gerealiseerd en getest werden in dit onderzoek.
+In Hoofdstuk \ref{ch:Proof-Of-Concept} wordt toegelicht welke oplossingen gerealiseerd en getest werden in dit onderzoek.
 
-In hoofdstuk \ref{ch:verwerkingresultaten} vindt u de volledige verwerking van alle bekomen experimenten en testen.
+In Hoofdstuk \ref{ch:verwerkingresultaten} vindt u de volledige verwerking van alle bekomen experimenten en testen.
 
-In Hoofdstuk~\ref{ch:conclusie}, tenslotte, wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt ook een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
+In Hoofdstuk~\ref{ch:conclusie}, tenslotte wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt ook een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
 
