--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -42,5 +42,5 @@
 
 \chapter*{\IfLanguageName{dutch}{Samenvatting}{Abstract}}
 
-Dit onderzoek biedt waardevolle inzichten voor bedrijven die zich toeleggen op het produceren van smart locker systemen met vooraf aangemaakte toegangscodes in de vorm van QR-codes. Moderne technologieën zijn niet meer weg te denken in onze dagdagelijkse samenleving. Wanneer mensen aanwezig zijn op evenementen of festivals willen ze deze elementen ook aanvoelen en hanteren voor algemeen gebruiksgemak. Lockit Rentals heeft daarvoor nieuwe smart locker systemen opgebouwd om festivalgangers de mogelijkheid te bieden hun persoonlijke bezittingen veilig en eenvoudig op te bergen. De veranderlijke omgevingen waarin toegangscodes gescand worden, kunnen zeer sterk beïnvloed worden door allerlei factoren. Daarom zal onderzoek en het uitvoeren van experimenten aantonen dat het scannen van toegangscodes beter afgehandeld wordt door gespecialiseerde QR-code scanners in plaats van de huidige gebruikte camera’s. De positieve aspecten worden extra benadrukt in extremere omgevingen of situaties zoals lichtinval of beschadigde QR-codes. De garantie dat de koper de toegangscode in een perfecte staat bewaart, is beperkt. Om dit risico te vermijden is Lockit Rentals verplicht om tijdens de volledige tijdsduur van een evenement logistieke medewerkers te voorzien. Uit bijkomstig onderzoek en opgestelde eisen van het bestuur van het locker bedrijf zal blijken dat een geautomatiseerde chatbot geschikt is om logistieke medewerkers te vervangen. Voor de ontwikkeling van deze chatbot wordt gebruik gemaakt van een online chatbot platform. De ontwikkelde chatbot kan de huurder zowel technische als praktische hulp aanbieden. Bijgevolg kunnen deze geanalyseerde technologieën een positieve impact hebben op de verhuur van lockers. 
+Dit onderzoek biedt waardevolle inzichten voor bedrijven die zich toeleggen op het produceren van smart locker systemen met vooraf aangemaakte toegangscodes in de vorm van QR-codes. Moderne technologieën zijn niet meer weg te denken in onze dagdagelijkse samenleving. Wanneer mensen aanwezig zijn op evenementen of festivals willen ze deze elementen ook aanvoelen en hanteren voor algemeen gebruiksgemak. Lockit Rentals heeft daarvoor nieuwe smart locker systemen opgebouwd om festivalgangers de mogelijkheid te bieden hun persoonlijke bezittingen veilig en eenvoudig op te bergen. De veranderlijke omgevingen waarin toegangscodes gescand worden, kunnen zeer sterk beïnvloed worden door allerlei factoren. Daarom zal onderzoek en het uitvoeren van experimenten aantonen dat het scannen van toegangscodes beter afgehandeld wordt door gespecialiseerde QR-code scanners in plaats van de huidige gebruikte camera’s. Die positieve aspecten worden extra benadrukt in extremere omgevingen of situaties zoals lichtinval of beschadigde QR-codes. De garantie dat de koper de toegangscode in een perfecte staat bewaart, is beperkt. Om dit risico te vermijden is Lockit Rentals verplicht om tijdens de volledige tijdsduur van een evenement logistieke medewerkers te voorzien. Uit bijkomstig onderzoek en opgestelde eisen van het bestuur van het locker bedrijf zal blijken dat een geautomatiseerde chatbot geschikt is om logistieke medewerkers te vervangen. Voor de ontwikkeling van deze chatbot wordt gebruik gemaakt van een online chatbot platform. De ontwikkelde chatbot kan de huurder zowel technische als praktische hulp aanbieden. Bijgevolg kunnen deze geanalyseerde technologieën een positieve impact hebben op de verhuur van lockers. 
 
