--- a/bachproef/voorwoord.tex
+++ b/bachproef/voorwoord.tex
@@ -14,7 +14,7 @@
 Deze bachelorproef wordt geschreven in het kader voor het voltooien van de opleiding Toegepaste Informatica. Wannes Van Dorpe en co-promotor Sebastien Vandenhouten hebben nieuwe locker units geproduceerd begin januari 2022. De lockers zelf zijn door derden gefabriceerd maar de elektronica is zelf gemonteerd. Aangezien de tijd voor productie gelimiteerd was, kwam de functionaliteit niet op de eerste plaats. Hierdoor is er veel potentieel ontstaan voor verbetering op vlak van technische infrastructuur. Door de uitbating en de werking van op de eerste rij mee te volgen, is mijn interesse gegroeid om de technieken te gaan optimaliseren voor een duurzaam en efficiënt gebruik.
 \newline
 \newline
-Deze thesis zou nooit tot stand gekomen zijn zonder hulp van verscheidenen mensen. In eerste plaats wil ik mijn co-promotor, Sebastien Vandenhouten bedanken voor de aangeboden hulp tijdens de opzet van de bachelorproef. Veel informatie over de werking kon hij niet verschaffen maar was wel altijd bereid om zo goed mogelijk op mijn vragen te antwoorden.
+Deze thesis zou nooit tot stand gekomen zijn zonder hulp van verscheidene mensen. In eerste plaats wil ik mijn co-promotor, Sebastien Vandenhouten bedanken voor de aangeboden hulp tijdens de opzet van de bachelorproef. Veel informatie over de werking kon hij niet verschaffen maar was wel altijd bereid om zo goed mogelijk op mijn vragen te antwoorden.
 \newline
 \newline
 Ten tweede wil ik graag Wannes Van Dorpe bedanken voor zijn steun en motivatie gedurende deze tijd. Aangezien hij de functie co-promotor niet kon aannemen, kon hij mij bijstaan in het verwerven van de gebruikte technieken. Zonder toegang van de operationele code zowel op de smart locker units als de mobiele applicatie van Lockit Rentals was dit onderzoek hooguit niet mogelijk geweest. 
