--- a/bachproef/VanDorpeLukasBP.tex
+++ b/bachproef/VanDorpeLukasBP.tex
@@ -96,7 +96,7 @@
     {Ontwikkeling van gebruiksvriendelijke technologieën in het optimaliseren van lockerverhuur.}
 \academicyear{\advance\year by -1 \the\year--\advance\year by 1 \the\year}
 \examperiod{1}
-\degreesought{\IfLanguageName{dutch}{Professionele bachelor in de toegepaste informatica}{Bachelor of applied computer science}}
+\degreesought{\IfLanguageName{dutch}{Professionele bachelor in de Toegepaste Informatica}{Bachelor of applied computer science}}
 \partialthesis{false} %% To display 'in partial fulfilment'
 %\institution{Internshipcompany BVBA.}
 
